--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       <div class="footer">
         <span>Or Connect with Social Media</span>
         <div class="social-fields">
-         <div class="social-field twitter">
-           <a href="#">
-            <i class="fab fa-twitter"></i>
-            Sifn in with Twitter
-           </a>
-         </div>
+          <div class="social-field twitter">
+            <a href="#">
+                <i class="fab fa-twitter"></i>
+                Sign in with Twitter
+            </a>
+        </div>
          <div class="social-field facebook">
           <a href="#">
             <i class="fab fa-facebook-f"></i>
