--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
          <div class="social-field facebook">
           <a href="#">
             <i class="fab fa-facebook-f"></i>
-           Sifn in with Facebook
+           Sign in with Facebook
           </a>
         </div> 
         </div>
